BI Viewport Render Preview Update Issue #42973

Closed
opened 2014-12-20 13:59:33 +01:00 by Leon Cheung · 9 comments
Member

System Information
Win 8.1 64bit | GTX 680

Blender Version
Broken: 2.73 test build d7e4944

Short description of error
When switching between Object materaial and Date material, viewport render preview failed to update.

Exact steps for others to reproduce the error
Please see attached test file, and this screencast video .

render_upd.blend

Thank you.

**System Information** Win 8.1 64bit | GTX 680 **Blender Version** Broken: 2.73 test build d7e4944 **Short description of error** When switching between Object materaial and Date material, viewport render preview failed to update. **Exact steps for others to reproduce the error** Please see attached test file, and this [screencast video ](http://youtu.be/9QfG6gncWt8). [render_upd.blend](https://archive.blender.org/developer/F132981/render_upd.blend) Thank you.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Sergey, need your 'update' skills here again... Adding DAG_id_tag_update((ID *)ob, OB_RECALC_OB); to the end of outliner's eOLDrawState tree_element_active_material does the trick (this is done anyway by RNA update handling of MatSlots), but meh... Why do we have to tag the object for update in such case?

Sergey, need your 'update' skills here again... Adding `DAG_id_tag_update((ID *)ob, OB_RECALC_OB);` to the end of outliner's `eOLDrawState tree_element_active_material` does the trick (this is done anyway by RNA update handling of MatSlots), but meh... Why do we have to tag the object for update in such case?

From quick glance changing the material link (actually, everything with rna_MaterialSlot_update) tags object for OB_RECALC_OB. This goes back to #24135.

Not really sure there's easier way to inform render engine about changes atm, we could just do the same in outliner with some comment about this.

From quick glance changing the material link (actually, everything with rna_MaterialSlot_update) tags object for OB_RECALC_OB. This goes back to #24135. Not really sure there's easier way to inform render engine about changes atm, we could just do the same in outliner with some comment about this.
Author
Member

Since it's not critical, maybe we can set priority to "Low" or todo?

Since it's not critical, maybe we can set priority to "Low" or todo?

This issue was referenced by 1fe7b84c73

This issue was referenced by 1fe7b84c733407b6fd0b855c1c91ad939c2ad342

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1fe7b84c73.

Closed by commit 1fe7b84c73.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42973
No description provided.