Fix T42973: Render viewport not updating when switching materials in Outliner

For now, do as RNA material update functions - tag object for update too.